# lsp-debug-tools.nvim

./: .luacheckrc  Makefile  README.md  check  debug.lua  debug2.lua  dune-project  example-run.lua  hello  launch-ls.lua  lsp_debug_tools.opam  test.js  test.ts
.github/: FUNDING.yml
.github/workflows/: default.yml
lib/: dune  lsp_debug_tools.ml  lsp_debug_tools.mli
lua/lsp-debug-tools/: init.lua  lsp-line.lua  test.ts
lua/lsp-debug-tools.nvim/: init.lua
lua/lsp-debug-tools/preview/: init.lua
lua/lsp-debug-tools/window/: init.lua
lua/lsp-debug-utils/: init.lua
test/: dune
